# haskell-buildpack-demo

./: README.md  heroku-haskell.cabal
src/: Cl.hs  Main.hs  Style.hs
static/: index.html
