name:                heroku-happstack
version:             0.1.0.0
synopsis:            Hello world, Hapstack on Heroku
homepage:            https://github.com/worldsayshi/heroku-happstack-hello-world
license:             MIT
author:              Per Fredelius
maintainer:          per.fredelius@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable heroku-haskell
  Hs-Source-Dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.5.*
                     , clay >=0.8
                     , blaze-html >=0.6.1.1
                     , happstack-lite >= 7.3.1
                     , text >= 0.11.2.3
